ako/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: k8s-papivot-tools
spec:
  ingressClassName: avi-lb
  rules:
    - host: blue.navlab.io # Make sure AVI DNS profile has it defined. 
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kube-shell
              port:
                number: 80
